--- a/package.json
+++ b/package.json
@@ -13,14 +13,22 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.5.2",
+    "@nuxt/icon": "1.15.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "clsx": "^2.1.1",
     "nuxt": "^3.17.6",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "daisyui": "^5.0.46",
     "eslint-plugin-format": "^1.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "^5.8.3"
   },
   "lint-staged": {
