--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["daisyui", "Nuxt", "prefersdark", "tabler"]
+  "cSpell.words": ["daisyui", "Nuxt", "nuxtjs", "prefersdark", "tabler"]
 }
