--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -15,11 +14,11 @@ jobs:
       - name: Install pnpm
       - uses: actions/setup-node@v4
         with:
-          version: '10'
+          version: "10"
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.x'
-          cache: 'pnpm'
+          node-version: "22.x"
+          cache: "pnpm"
       - run: pnpm install
       - run: pnpm lint:fix
