--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@nuxt/eslint": "1.5.2",
     "@nuxt/icon": "1.15.0",
     "@nuxtjs/color-mode": "3.5.2",
+    "@pinia/nuxt": "0.11.1",
     "@tailwindcss/vite": "^4.1.11",
     "better-auth": "^1.2.12",
     "clsx": "^2.1.1",
     "concurrently": "^9.2.0",
     "drizzle-orm": "^0.44.2",
     "nuxt": "^3.17.6",
+    "pinia": "^3.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
