--- a/package.json
+++ b/package.json
@@ -16,20 +16,25 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@libsql/client": "^0.15.9",
+    "@libsql/client": "^0.15.10",
     "@nuxt/eslint": "1.5.2",
     "@nuxt/icon": "1.15.0",
     "@nuxtjs/color-mode": "3.5.2",
     "@pinia/nuxt": "0.11.1",
     "@tailwindcss/vite": "^4.1.11",
+    "@vee-validate/nuxt": "^4.15.1",
+    "@vee-validate/zod": "^4.15.1",
     "better-auth": "^1.2.12",
     "clsx": "^2.1.1",
     "concurrently": "^9.2.0",
-    "drizzle-orm": "^0.44.2",
+    "drizzle-orm": "^0.44.3",
+    "drizzle-zod": "^0.8.2",
     "nuxt": "^3.17.7",
+    "nuxt-csurf": "1.6.5",
     "pinia": "^3.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "zod": "^4.0.5"
