--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "@tailwindcss/vite": "^4.1.11",
     "@vee-validate/nuxt": "^4.15.1",
     "@vee-validate/zod": "^4.15.1",
-    "better-auth": "^1.2.12",
+    "better-auth": "^1.3.1",
     "clsx": "^2.1.1",
     "concurrently": "^9.2.0",
     "drizzle-orm": "^0.44.3",
     "drizzle-zod": "^0.8.2",
+    "maplibre-gl": "^5.6.1",
     "nanoid": "^5.1.5",
     "nuxt": "^3.17.7",
     "nuxt-csurf": "1.6.5",
+    "nuxt-maplibre": "1.1.1",
     "pinia": "^3.0.3",
     "slug": "^11.0.0",
     "tailwind-merge": "^3.3.1",
